[tool.poetry]
name = "hexlet-code"
version = "0.9.4"
description = "A set of conlose games. Hexlet Python-programmer first project"
authors = ["Aleksandr Efimovskiy <bdf715@gmail.com>"]
packages = [
  { include = "brain_games" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
]
repository = "https://github.com/bdf715/python-project-lvl1"

[tool.poetry.dependencies]
python = "^3.7"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
